--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+title: Welcome to Jonathan's homepage!
+description: I will be updating this github site with projects as the semester progresses.
